3.0.0.rc1 / 2013-08-08

* Enhancements

  * :field_name can be passed as an Array like [ :first_name, :last_name ], which will join them with a space

3.0.0.beta / 2013-07-26

* Enhancements

  * test steps with after: and every: options, referring to row counts in the previous step
  * :limit option for import steps - oh yeah
  * :random_skip option - goes nicely with :limit if you're debugging

* Bug fixes

  * Make sure to stringify data_miner(:append) option

3.0.0.alpha / 2013-07-24

* breaking changes

  * :dictionary is now just a plain Hash-like object (responds to []) - and no longer attempts to refresh between runs  
  * no more unit conversions
  * always nullifies blank strings
  * always overwrites columns whether there was a non-null value there before or not (no more :overwrite option)
  * don't use synthesize option, just pass a block
  * synthesized values get the same whitespace compression and stripping as other values
  * not tested against the Earth library, which has particular requirements and makes testing too complicated
  * doesn't keep DataMiner::Run or DataMiner::Run::ColumnStatistic records
  * no more :matcher option

* enhancements

  * if you have a postgres hstore column called "foo", you can do store 'foo.bar'

2.5.2 / 2013-07-05

* Bug fixes

  * Get connection from the right connection pool (namely, the model's, not AR::Base's)

2.5.1 / 2013-03-15

* Enhancements

  * Just suggest that people use roo > 1.10.3

2.5.0 / 2013-03-15

* Breaking changes

  * Lock to roo 1.10.1 and activerecord > 3

* Enhancements

  * If you don't define a `key` in a data_miner block, then just keep appending records - thanks @towerhe
  * Got rid of ridiculous "install unicode-utils" warning

* Bug fixes

  * Don't die because an Alchemist::NumericConversion is passed to a function that expects a plain Float - thanks @towerhe

2.4.1 / 2012-07-26

* Enhancements

  * Support sqlite in sql steps