@@ -1,3 +1,7 @@
+* Enhancements
+
+  * (Re-)Start logging the beginning, erroring, and ending of steps
+
 3.0.0.rc1 / 2013-08-08
 
 * Enhancements
